<resources>
    <string name="app_name">World Cup</string>
    <string name="hint">Year </string>
    <string name="title">The World Cup </string>
    <string name="year">Year: </string>
    <string name="host">Host: </string>
    <string name="champion">Champion: </string>
    <string name="runnerup">Runner-up: </string>
    <string name="striker">Striker: </string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="goback">Return</string>
    <string name="noPreviousCup">There were no World Cup before 1930</string>
    <string name="noUpcomingCup">Upcoming world cups will not be displayed yet</string>
    <string name="ww2">There were no World Cup due to WW2</string>
    <string name="noCup">This year had no World Cup</string>
    <string name="olympic">This year had Olympic Games</string>
</resources>