<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/yearEditText"
        android:layout_width="53dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="300dp"
        android:ems="2"
        android:hint="@string/hint"
        android:inputType="number"
        android:maxLength="4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitButton"
        android:layout_marginStart="150dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:text="@string/clear"
        android:visibility="invisible" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="-48dp"
        android:text="@string/goback"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/title"
        android:layout_marginTop="-490dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="25sp"
        android:layout_marginStart="120dp"
        android:text="@string/title"

        />
    <TextView
        android:id="@+id/year"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/host"
        android:layout_marginTop="1dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/champion"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/runnerup"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        />

    <TextView
        android:id="@+id/striker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/goals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="-33dp"
        android:ems="10"
        android:textSize="25sp"/>
</LinearLayout>